<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfileActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtBasicInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/basicinfo"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/solidLine3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="16dp"
                android:background="?attr/colorPrimary" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/title"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeErrorColor="?colorError"
                app:boxStrokeWidth="2dp"
                app:startIconTint="?colorSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/fname"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeErrorColor="?colorError"
                app:boxStrokeWidth="2dp"
                app:startIconTint="?colorSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/lname"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeErrorColor="?colorError"
                app:boxStrokeWidth="2dp"
                app:startIconTint="?colorSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/mobile"
                app:boxCornerRadiusBottomEnd="20dp"
                app:boxCornerRadiusBottomStart="20dp"
                app:boxCornerRadiusTopEnd="20dp"
                app:boxCornerRadiusTopStart="20dp"
                app:boxStrokeErrorColor="?colorError"
                app:boxStrokeWidth="2dp"
                app:startIconTint="?colorSecondary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/notificationsSwitch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:text="@string/notifications"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateProfileButton"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:text="Update"
                android:textSize="16sp"
                app:cornerRadius="20dp"/>

            <View
                android:id="@+id/solidLine1"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="?attr/colorPrimary"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtcontactinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addressinfo"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <View
                android:id="@+id/solidLine2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="15dp"
                android:background="?attr/colorPrimary" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDelivery"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

<!--            <TextView-->
<!--                android:id="@+id/goBackTextView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:padding="15dp"-->
<!--                android:text="Go back"-->
<!--                android:textColor="?colorPrimary"-->
<!--                android:textSize="16sp" />-->

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>