<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="20dp"
        tools:context=".ui.CartFragment">


        <com.google.android.material.textview.MaterialTextView
        android:id="@+id/myTextView"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:fontWeight="700"
        android:text="@string/my"
        android:textColor="?attr/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/solidLine1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.460"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.761" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/CartTextView"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cart"
        app:layout_constraintBottom_toTopOf="@id/solidLine1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

        <View
            android:id="@+id/solidLine1"
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:background="?attr/colorOnSurfaceVariant"

            app:layout_constraintEnd_toStartOf="@id/solidLine2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/solidLine2"
            android:layout_width="80dp"
            android:layout_height="2dp"
            android:background="?attr/colorOnSurfaceVariant"

            app:layout_constraintBottom_toBottomOf="@+id/solidLine1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/solidLine1"
            app:layout_constraintTop_toTopOf="parent" />



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/summaryTextView"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:fontWeight="700"
            android:text="Summary"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.033"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="520dp" />

        <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalTextView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontWeight="700"
        android:text="@string/total"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summaryTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/totalPriceTextView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontWeight="700"
        android:text="R"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summaryTextView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/checkoutButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="116dp"
            android:text="@string/Checkout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
 />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>